@@ -208,6 +208,7 @@
      {module, cloudi_service_http_cowboy},
      {args, 
       [{port, 6464}, {output, external}, {use_websockets, true},
+       {query_get_format, text_pairs},
        {websocket_connect_sync,
         "/tests/websockets/bounce/websocket/connect"},
        {websocket_disconnect_async,
@@ -230,21 +231,24 @@
     {internal,
         "/tests/http/",
         cloudi_service_http_cowboy,
-        [{port, 6466}, {output, external}],
+        [{port, 6466}, {output, external},
+         {query_get_format, text_pairs}],
         immediate_closest,
         5000, 5000, 5000, [api], undefined, 1, 5, 300,
         []},
     {internal,
         "/tests/http/",
         cloudi_service_http_cowboy,
-        [{port, 6467}, {output, internal}],
+        [{port, 6467}, {output, internal},
+         {query_get_format, text_pairs}],
         immediate_closest, % quickstart testing, to avoid false negatives
         5000, 5000, 5000, undefined, undefined, 1, 5, 300,
         []},
     {internal,
         "/tests/http/",
         cloudi_service_http_elli,
-        [{port, 6468}, {output, external}],
+        [{port, 6468}, {output, external},
+         {query_get_format, text_pairs}],
         immediate_closest,
         5000, 5000, 5000, [api], undefined, 1, 5, 300,
         []},
