@@ -1,6 +1,13 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fenc=utf-8 sts=4 ts=4 et nomod:
 
+2015-10-24 Michael Truog   <mjtruog [at] gmail (dot) com>
+
+    * Add query_get_format configuration argument to both
+      cloudi_service_http_cowboy and cloudi_service_http_elli
+      with the default set to 'raw' (to get the previous default behavior,
+      set to 'text_pairs')
+
 2015-10-08 Michael Truog   <mjtruog [at] gmail (dot) com>
 
     * Fix false negative from dialyzer when CLOUDI_CORE_STANDALONE is defined
